--- a/client/temp2.html
+++ b/client/temp2.html
@@ -1,3 +1,6 @@
 <template name="temp2">
-    <h1>This is Temp2</h1>
+	<h1>This is temp2 !!!</h1>
+</template>
+<template name="code">
+	<img src="events.PNG" width="100%">
 </template>
